--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Mon CV Web</title>
+</head>
+<body>
+
+  <h1>Bonjour, je suis Mohamed</h1>
+
+  <img src="https://picsum.photos/200" alt="Photo de profil" width="200">
+
+  <h2>À propos de moi</h2>
+  <p>Je suis un passionné de développement web, curieux et toujours prêt à apprendre de nouvelles choses. J'aime créer des sites web clairs, modernes et efficaces.</p>
+
+  <h2>Mes compétences</h2>
+  <ul>
+    <li>HTML5 & CSS3</li>
+    <li>JavaScript (débutant)</li>
+    <li>Gestion de projets</li>
+    <li>Rédaction de contenus</li>
+  </ul>
+
+  <h2>Me contacter</h2>
+  <p>Tu peux me retrouver sur :
+    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+  </p>
+
+</body>
+</html>
 
